Change Primary color code

--- a/app/less/config.less
+++ b/app/less/config.less
@@ -13,9 +13,9 @@
 @topic_font         :sans-serif;
 
 // http://www.color-hex.com/color/21ce99
-@primary_color      :#21ce99; // Active Color
-@primary_color_dark :#093d2d;
-@primary_color_light:#bcf0e0;
+@primary_color      :#4095C8; // Active Color
+@primary_color_dark :#3581C2;
+@primary_color_light:#64BEE3;
 
 @second_color       :#e74c3c; // Alert Color
 @second_color_dark  :#451612; // Alert Color
@@ -26,17 +26,17 @@
 @third_color_light  :#ffcb7f; // Lost Color
 
 // http://www.color-hex.com/color/040d14
-@bg_color           :#040d14;
+@bg_color           :#FFFFFF;
 @bg_color_dark      :#030a10;
 @bg_color_light     :#1d252b;
 
-@text_active_color  :#FFFFFF;
-@text_normal_color  :#BBBBBB;
+@text_active_color  :#000000;
+@text_normal_color  :#111111;
 
-@text_dark_color    :#0d5e4e;
+@text_dark_color    :#000000;
 @black_color        :#000000;
 
-@border_color       :#14191e;
+@border_color       :#EEEEEE;
 
 html {
     -ms-touch-action: manipulation;
@@ -52,7 +52,6 @@ body{
     background: @bg_color;
     font-family: @topic_font;
     font-weight: 200;
-    // overflow-y:scroll;
     overflow-x:hidden;
 }
 
