--- a/app/less/config.less
+++ b/app/less/config.less
@@ -36,7 +36,7 @@
 @text_dark_color    :#000000;
 @black_color        :#000000;
 
-@border_color       :#EEEEEE;
+@border_color       :#DDDDDD;
 
 html {
     -ms-touch-action: manipulation;
