--- a/app/less/config.less
+++ b/app/less/config.less
@@ -38,6 +38,9 @@
 
 @border_color       :#DDDDDD;
 
+@font-size-normal: 1.2em;
+@font-size-mini: 0.75em;
+
 html {
     -ms-touch-action: manipulation;
     touch-action: manipulation;
