--- a/app/less/style.less
+++ b/app/less/style.less
@@ -8,60 +8,40 @@
 	width: 100%;
 	height: 60px;
 	float: left;
-	display: inline-block;
+	display: block;
 	z-index: 99;
-	background: @bg_color_dark;
-	font-family: @topic_font;
 
-	&.-nonfixed{
-		position: relative;
-		background: transparent;
-		box-shadow: none;
-	}
-
-	.mobile-title{
+	.logo {
 		float: left;
-		padding: 18px 0%;
-		height: 18px;
-		font-size: 1.2em;
-		text-decoration: none;
-		line-height: 1em;
-		text-align: center;
-		display: none;
-		text-overflow: ellipsis;
-		white-space: nowrap;
-		overflow: hidden;
-
-		a{
-			color: @text_active_color;
-			text-decoration: none;
+		display: block;
+		height: 60px;
+		img {
+			height: 60px;
 		}
 	}
 
-	.title{
-		width: 90%;
+	a.logo-title{
 		float: left;
-		display: inline-block;
+		display: block;
 		padding: 24px 0%;
 		height: 12px;
 		font-size: 1.2em;
 		text-decoration: none;
 		line-height: 1em;
-		color: @text_active_color;
 		text-overflow: ellipsis;
 		white-space: nowrap;
 		overflow: hidden;
+		background: #999999;
 
 		i{ margin-right: 5px; }
 	}
 
 	.navi-items{
 		float: left;
-		display: inline-block;
+		display: block;
 		padding: 22px 0%;
 		margin-right: 1.5%;
 		height: 16px;
-		color: @text_active_color;
 		font-size: 1.2em;
 		text-decoration: none;
 		line-height: 1em;
@@ -634,16 +614,12 @@
 }
 
 .device-info{
-	position: fixed;
-	top: 100px;
-	width: 29%;
-	padding: 3%;
-	border: 1px solid @bg_color_light;
-	right: 15%;
+	width: 34%;
+	margin: 0 33%;
 	float: left;
-	display: inline-block;
+	display: block;
 	border-radius: 3px;
-	box-shadow: 1px 1px 20px rgba(0,0,0,0.8);
+	background: #DDDDDD;
 
 	.current{
 		width: 100%;
@@ -770,11 +746,12 @@
 }
 
 .device-history{
-	width: 27%;
-	margin-left: 20%;
+	width: 34%;
+	margin: 0 33%;
 	float: left;
-	display: inline-block;
-	margin-top: 40px;
+	display: block;
+	border-radius: 3px;
+	background: #DDDDDD;
 
 	.history{
 		width: 100%;
