--- a/app/css/style.css
+++ b/app/css/style.css
@@ -463,7 +463,7 @@ body {
   width: 100%;
   float: left;
   display: block;
-  font-size: 2.2em;
+  font-size: 2.5em;
 }
 .login div h1 a {
   text-decoration: none;
@@ -477,29 +477,28 @@ body {
   font-size: 1.1em;
 }
 .login div .input-text {
-  width: 88%;
+  width: 90%;
   float: left;
   display: block;
-  font-size: 1.1em;
+  font-size: 1.2em;
   border: 0px;
-  padding: 5% 6%;
+  padding: 5%;
   background: #dddddd;
-  color: #4095c8;
+  color: #333333;
   margin: 0%;
   margin-bottom: 5%;
   border-radius: 5px;
   font-family: sans-serif;
-  line-height: 1.5em;
   border: 0;
 }
 .login div .input-text:focus {
-  color: #4095c8;
+  color: #000000;
 }
 .login div .btn {
   width: 100%;
   float: left;
   display: block;
-  font-size: 1.1em;
+  font-size: 1.2em;
   border: 0px;
   padding: 5%;
   margin: 0%;
@@ -508,7 +507,7 @@ body {
   background: #4095c8;
   color: #ffffff;
   font-family: sans-serif;
-  box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 3px 3px 7px rgba(0, 0, 0, 0.25);
 }
 .login div .btn i {
   margin-left: 10px;
@@ -525,9 +524,9 @@ body {
 .login div p {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   color: #111111;
-  font-size: 1em;
+  font-size: 1.2em;
   margin-bottom: 10%;
   text-align: center;
 }
@@ -543,68 +542,64 @@ body {
   text-decoration: underline;
 }
 .form {
-  width: 50%;
-  margin: 0% 25%;
-  padding-bottom: 5%;
+  width: 40%;
+  margin: 0% 30%;
+  margin-top: 80px;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .form h2 {
   width: 100%;
   padding: 3% 0%;
   margin-bottom: 4%;
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 3em;
   color: #000000;
   border-bottom: 1px solid #dddddd;
-  text-align: center;
 }
 .form .form-items {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   margin-bottom: 3%;
 }
 .form .form-items.-hidden {
   display: none;
 }
 .form .form-items .label {
-  width: 35%;
+  width: 100%;
   padding: 2% 0%;
   float: left;
-  display: inline-block;
-  text-align: right;
+  display: block;
   margin-right: 5%;
-  font-size: 1em;
-  line-height: 1.3em;
+  font-size: 1.2em;
   color: #000000;
 }
 .form .form-items .input {
-  width: 60%;
-  float: right;
-  display: inline-block;
+  width: 100%;
+  float: left;
+  display: block;
 }
 .form .form-items .input .input-text,
 .form .form-items .input .input-textarea {
-  width: 94%;
-  padding: 2.5% 3%;
+  width: 96%;
+  padding: 2%;
   float: left;
-  display: inline-block;
-  font-size: 1em;
+  display: block;
+  font-size: 1.2em;
   border: 0px;
   margin: 0px;
-  line-height: 1.2em;
-  background: #dddddd;
-  color: #4095c8;
+  background: #EEEEEE;
+  color: #000000;
   font-family: sans-serif;
-  border-radius: 2px;
+  border-radius: 5px;
   resize: none;
-  border: 1px solid #1d252b;
+  border: 1px solid #DDDDDD;
 }
 .form .form-items .input .input-text:focus,
 .form .form-items .input .input-textarea:focus {
-  border: 1px solid #4095c8;
+  border: 1px solid #999999;
 }
 .form .form-items .input .input-text.-haft,
 .form .form-items .input .input-textarea.-haft {
@@ -710,16 +705,16 @@ body {
 .form .form-items .input button.btn {
   float: left;
   display: inline-block;
-  font-size: 1em;
+  font-size: 1.2em;
   padding: 3% 6%;
-  line-height: 1.1em;
-  border-radius: 2px;
+  border-radius: 5px;
   border: 0px;
   margin: 0%;
   margin-top: 5%;
   background: #4095c8;
-  color: #000000;
+  color: #FFFFFF;
   font-family: sans-serif;
+  box-shadow: 1px 3px 5px rgba(0, 0, 0, 0.25);
 }
 .form .form-items .input button.btn.-completed {
   background: transparent;
@@ -841,24 +836,25 @@ body {
   margin: 80px 30%;
   float: left;
   display: block;
-  border-radius: 3px;
-  background: #DDDDDD;
+}
+.device-info h1 {
+  font-size: 2em;
 }
 .device-info .current {
   width: 100%;
   padding-bottom: 10%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .device-info .current .current-now {
   width: 33.33%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .device-info .current .current-now .v {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
   font-size: 4em;
   line-height: 1em;
   color: #4095c8;
@@ -875,7 +871,7 @@ body {
 .device-info .current .current-items {
   width: 33.33%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: right;
   margin-top: 7%;
 }
@@ -912,7 +908,7 @@ body {
 .device-info .info {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .device-info .info .info-items {
   width: 100%;
@@ -920,7 +916,7 @@ body {
   float: left;
   display: inline-block;
   border-bottom: 1px solid #dddddd;
-  font-size: 1em;
+  font-size: 1.2em;
   line-height: 1em;
 }
 .device-info .info .info-items:last-child {
@@ -962,23 +958,21 @@ body {
   height: 250px;
 }
 .device-history {
-  width: 34%;
-  margin: 0 33%;
+  width: 40%;
+  margin: 0 30%;
   float: left;
   display: block;
-  border-radius: 3px;
-  background: #DDDDDD;
 }
 .device-history .history {
   width: 100%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .device-history .history .loading {
   width: 100%;
   margin: 20% 0%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: center;
   color: #111111;
   font-size: 0.9em;
@@ -996,9 +990,9 @@ body {
   width: 100%;
   padding: 3.5% 0%;
   float: left;
-  display: inline-block;
+  display: block;
   border-bottom: 1px solid #dddddd;
-  font-size: 1em;
+  font-size: 1.2em;
   color: #111111;
   line-height: 1em;
 }
@@ -1008,7 +1002,7 @@ body {
 .device-history .history .logitems .id {
   width: 35%;
   float: left;
-  display: inline-block;
+  display: block;
 }
 .device-history .history .logitems .id i {
   color: #e74c3c;
@@ -1017,7 +1011,7 @@ body {
 .device-history .history .logitems .time {
   width: 35%;
   float: left;
-  display: inline-block;
+  display: block;
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
@@ -1025,7 +1019,7 @@ body {
 .device-history .history .logitems .temp {
   width: 20%;
   float: left;
-  display: inline-block;
+  display: block;
   text-align: right;
   color: #000000;
 }
@@ -1035,10 +1029,10 @@ body {
   display: inline-block;
   text-align: right;
 }
-.device-history .history .logitems .icon i.fa-arrow-down {
+.device-history .history .logitems .icon i.fa-angle-double-down {
   color: #4095c8;
 }
-.device-history .history .logitems .icon i.fa-arrow-up {
+.device-history .history .logitems .icon i.fa-angle-double-up {
   color: #e74c3c;
 }
 .footer {
