--- a/app/less/style.less
+++ b/app/less/style.less
@@ -289,7 +289,7 @@
 			width: 100%;
 			float: left;
 			display: block;
-			font-size: 2.2em;
+			font-size: 2.5em;
 
 			a{
 				text-decoration: none;
@@ -305,23 +305,22 @@
 		}
 
 		.input-text{
-			width: 88%;
+			width: 90%;
 			float: left;
 			display: block;
-			font-size: 1.1em;
+			font-size: 1.2em;
 			border: 0px;
-			padding: 5% 6%;
+			padding: 5%;
 			background: @border_color;
-			color: @primary_color;
+			color: #333333;
 			margin: 0%;
 			margin-bottom: 5%;
 			border-radius: 5px;
 			font-family: @topic_font;
-			line-height: 1.5em;
 			border: 0;
 
 			&:focus{
-				color: @primary_color;
+				color: #000000;
 			}
 		}
 
@@ -329,7 +328,7 @@
 			width: 100%;
 			float: left;
 			display: block;
-			font-size: 1.1em;
+			font-size: 1.2em;
 			border: 0px;
 			padding: 5%;
 			margin: 0%;
@@ -338,7 +337,7 @@
 			background: @primary_color;
 			color: @bg_color;
 			font-family: @topic_font;
-			box-shadow: 2px 3px 5px rgba(0,0,0,0.25);
+			box-shadow: 3px 3px 7px rgba(0,0,0,0.25);
 
 			i{
 				margin-left: 10px;
@@ -359,9 +358,9 @@
 		p{
 			width: 100%;
 			float: left;
-			display: inline-block;
+			display: block;
 			color: @text_normal_color;
-			font-size: 1em;
+			font-size: 1.2em;
 			margin-bottom: 10%;
 			text-align: center;
 
@@ -381,66 +380,62 @@
 }
 
 .form{
-	width: 50%;
-	margin: 0% 25%;
-	padding-bottom: 5%;
+	width: 40%;
+	margin: 0% 30%;
+	margin-top: 80px;
 	float: left;
-	display: inline-block;
+	display: block;
 
-	h2{
+	h2 {
 		width: 100%;
 		padding: 3% 0%;
 		margin-bottom: 4%;
 		float: left;
-		display: inline-block;
+		display: block;
 		font-size: 3em;
 		color: @text_active_color;
 		border-bottom: 1px solid @border_color;
-		text-align: center;
 	}
 
 	.form-items{
 		width: 100%;
 		float: left;
-		display: inline-block;
+		display: block;
 		margin-bottom: 3%;
 
 		&.-hidden{ display: none; }
 
 		.label{
-			width: 35%;
+			width: 100%;
 			padding: 2% 0%;
 			float: left;
-			display: inline-block;
-			text-align: right;
+			display: block;
 			margin-right: 5%;
-			font-size: 1em;
-			line-height: 1.3em;
+			font-size: 1.2em;
 			color: @text_active_color;
 		}
 
 		.input{
-			width: 60%;
-			float: right;
-			display: inline-block;
+			width: 100%;
+			float: left;
+			display: block;
 
 			.input-text, .input-textarea{
-				width: 94%;
-				padding: 2.5% 3%;
+				width: 96%;
+				padding: 2%;
 				float: left;
-				display: inline-block;
-				font-size: 1em;
+				display: block;
+				font-size: 1.2em;
 				border: 0px;
 				margin: 0px;
-				line-height: 1.2em;
-				background: @border_color;
-				color: @primary_color;
+				background: #EEEEEE;
+				color: #000000;
 				font-family: @topic_font;
-				border-radius: 2px;
+				border-radius: 5px;
 				resize: none;
-				border: 1px solid @bg_color_light;
+				border: 1px solid #DDDDDD;
 
-				&:focus{ border: 1px solid @primary_color; }
+				&:focus{ border: 1px solid #999999; }
 				&.-haft{ width: 42%; }
 				&.-haft-right{ float: right; }
 			}
@@ -538,16 +533,16 @@
 			button.btn{
 				float: left;
 				display: inline-block;
-				font-size: 1em;
+				font-size: 1.2em;
 				padding: 3% 6%;
-				line-height: 1.1em;
-				border-radius: 2px;
+				border-radius: 5px;
 				border: 0px;
 				margin: 0%;
 				margin-top: 5%;
 				background: @primary_color;
-				color: @black_color;
+				color: #FFFFFF;
 				font-family: @topic_font;
+				box-shadow: 1px 3px 5px rgba(0,0,0,0.25);
 
 				&.-completed{
 					background: transparent;
@@ -667,24 +662,26 @@
 	margin: 80px 30%;
 	float: left;
 	display: block;
-	border-radius: 3px;
-	background: #DDDDDD;
+	
+	h1 {
+		font-size: 2em;
+	}
 
 	.current{
 		width: 100%;
 		padding-bottom: 10%;
 		float: left;
-		display: inline-block;
+		display: block;
 
 		.current-now{
 			width: 33.33%;
 			float: left;
-			display: inline-block;
+			display: block;
 
 			.v{
 				width: 100%;
 				float: left;
-				display: inline-block;
+				display: block;
 				font-size: 4em;
 				line-height: 1em;
 				color: @primary_color;
@@ -703,7 +700,7 @@
 		.current-items{
 			width: 33.33%;
 			float: left;
-			display: inline-block;
+			display: block;
 			text-align: right;
 			margin-top: 7%;
 
@@ -740,7 +737,7 @@
 	.info{
 		width: 100%;
 		float: left;
-		display: inline-block;
+		display: block;
 
 		.info-items{
 			width: 100%;
@@ -748,7 +745,7 @@
 			float: left;
 			display: inline-block;
 			border-bottom: 1px solid @border_color;
-			font-size: 1em;
+			font-size: 1.2em;
 			line-height: 1em;
 
 			&:last-child{ border-bottom: 0px; }
@@ -795,23 +792,21 @@
 }
 
 .device-history{
-	width: 34%;
-	margin: 0 33%;
+	width: 40%;
+	margin: 0 30%;
 	float: left;
 	display: block;
-	border-radius: 3px;
-	background: #DDDDDD;
 
 	.history{
 		width: 100%;
 		float: left;
-		display: inline-block;
+		display: block;
 
 		.loading{
 			width: 100%;
 			margin: 20% 0%;
 			float: left;
-			display: inline-block;
+			display: block;
 			text-align: center;
 			color: @text_normal_color;
 			font-size: 0.9em;
@@ -831,9 +826,9 @@
 			width: 100%;
 			padding: 3.5% 0%;
 			float: left;
-			display: inline-block;
+			display: block;
 			border-bottom: 1px solid @border_color;
-			font-size: 1em;
+			font-size: 1.2em;
 			color: @text_normal_color;
 			line-height: 1em;
 
@@ -842,15 +837,14 @@
 			.id{
 				width: 35%;
 				float: left;
-				display: inline-block;
+				display: block;
 
-				i{ color: @second_color; margin-left: 5px; }
+				i { color: @second_color; margin-left: 5px; }
 			}
 			.time{
 				width: 35%;
 				float: left;
-				display: inline-block;
-				// color: @text_active_color;
+				display: block;
 				text-overflow: ellipsis;
 				white-space: nowrap;
 				overflow: hidden;
@@ -858,7 +852,7 @@
 			.temp{
 				width: 20%;
 				float: left;
-				display: inline-block;
+				display: block;
 				text-align: right;
 				color: @text_active_color;
 			}
@@ -868,8 +862,8 @@
 				display: inline-block;
 				text-align: right;
 
-				i.fa-arrow-down{ color: @primary_color; }
-				i.fa-arrow-up{ color: @second_color; }
+				i.fa-angle-double-down{ color: @primary_color; }
+				i.fa-angle-double-up{ color: @second_color; }
 			}
 		}
 	}
