--- a/app/less/style.less
+++ b/app/less/style.less
@@ -59,6 +59,53 @@
 	float: left;
 	display: block;
 
+	.box {
+		display: flex;
+		flex-flow: column wrap;
+
+		h2 {
+			font-size: 2em;
+		}
+		.lists {
+			display: flex;
+			flex-flow: row wrap;
+
+			a.link {
+				padding: 0 20px;
+				width: 140px;
+				height: 140px;
+				text-decoration: none;
+				background: #EEEEEE;
+				border-radius: 5px;
+				margin-right: 20px;
+				margin-top: 20px;
+				display: flex;
+				flex-direction: column;
+				justify-content: center;
+				color: #999999;
+
+				&.active {
+					background: @primary_color;
+					color: #FFFFFF;
+				}
+
+				.name {
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					overflow: hidden;
+					font-size: 1.4em;
+					font-weight: bold;
+				}
+				.counter {
+					font-size: 0.8em;
+					text-overflow: ellipsis;
+					white-space: nowrap;
+					overflow: hidden;
+				}
+			}
+		}
+	}
+
 	.space-list {
 		width: 100%;
 		float: left;
